Aplicacion de maps en el footer

--- a/pages/amaranto.html
+++ b/pages/amaranto.html
@@ -101,54 +101,23 @@
     </section>
 
 
-    <!-- <article class="main amaranto">
-        <img src="../images/elamaranto.jpeg" alt="El amaranto">
-            <div class="text"><h1>El amaranto</h1>
-                <p>Muchas personas consideran que los cereales más nutritivos son la avena, el arroz, el trigo, la
-                    quinoa y el maíz. Pocos incluyen en esta lista al amaranto,
-                    pues desconocen que este alimento posee un valor nutricional muy alto.
-
-                    Se debe saber que el amaranto es considerado por diversas organizaciones alimentarias
-                    como uno de los  mejores alimentos del mundo. Además, la NASA lo emplea en la dieta de sus
-                    astronautas para aportar mayor nutrición a los mismos.</p>
-            </div>
-        <img src="../images/cereal2.jpeg" alt="En cereal">
-            <div class="text">
-                <p>El amaranto es un cereal perteneciente a la familia Amaranthaceae. Su nombre científico es
-                    Amaranthus Caudatus.
-                    Esta especie de cereal es originario de los valles que se encuentran entre Ecuador y Argentina.
-                    Se adapta a todo tipo de suelo, pero su cultivo suele ser más efectivo cuando su siembra se
-                    realiza en zonas de clima templado.
-
-                    Además de ser un alimento delicioso, es sano y nutritivo. Sus hojas, flores y semillas pueden
-                    ser consumidas. Esta planta también funciona para decorar
-                    las casas, pues posee un tono fucsia muy atractivo.
-                    Es un alimento recomendado para todas las personas, especialmente en las mujeres que están en
-                    estado de
-                    gestación o lactando. Este al igual que otros cereales es muy nutritivo.
-                    Esta planta y su semilla son una excelente fuente de proteínas y aminoácidos.
-                    Es más proteico que el arroz y el trigo. También es rico en minerales. Además,
-                    no contiene gluten.
-                </p> 
-            </div>
-            
-   </article>   -->
+    
     <!-- -------------------------------main fin--------------------------------- -->
 
   <!-- -------------------------------footer inicio--------------------------------- -->
 
-    <footer class="footer">
-        <div>
-            <ul class="footer-list">
-                <li class="nav-item"> 
-                    <a href="https://www.facebook.com/">Facebook</a> </li>
-                <li class="nav-item"> 
-                    <a href="https://twitter.com/?lang=es">Twitter</a> </li>
-                <li class="nav-item"> 
-                    <a href="mailto:mail@gmail.com">email</a> </li>
-            </ul>
-        </div>  
-    </footer>
+  <footer class="footer">
+    <div>
+        <ul class="footer-list">
+            <li class="navF-item"> 
+                <a href="https://www.facebook.com/" class="redSocial-face">Facebook</a> </li>
+            <li class="navF-item"> 
+                <a href="https://twitter.com/?lang=es" class="redSocial-twitter">Twitter</a> </li>
+            <li class="navF-item"> 
+                <a href="mailto:mail@gmail.com"class="redSocial-email">email</a> </li>
+        </ul>
+    </div>  
+</footer>
 
     <!-- -------------------------------footer fin--------------------------------- -->
 
