--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,11 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!-- Metakeywords -->
+      
+      <meta name="keywords" content="amaranto, natural, saludable, artesanal, dulces, prehispanico, mexicano, alegrias, churros, pan, cereales">
+
+      <!-- meta descriptiion -->
+     
+      <meta name="description" content="Gran variedad de productos hechos a base de amaranto, alimento de origen prehispánico, de gran contenido
+           nutricional e innumerables beneficios para la salud de las personas. Mira toda la variedad de dulces y botanas de gran calidad nutricional y deliciosas">
+  
+    <!-- Favicon -->
+    <link rel="icon" href="images/ico32x32.png">     
     <link rel="stylesheet" href="../css/estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
-    <title>El Amaranto</title>
+    <title>Productos</title>
 </head>
 <body class="grid-container-pages">
 
@@ -175,12 +186,12 @@
     <footer class="footer">
         <div>
             <ul class="footer-list">
-                <li class="nav-item"> 
-                    <a href="https://www.facebook.com/">Facebook</a> </li>
-                <li class="nav-item"> 
-                    <a href="https://twitter.com/?lang=es">Twitter</a> </li>
-                <li class="nav-item"> 
-                    <a href="mailto:mail@gmail.com">email</a> </li>
+                <li class="navF-item"> 
+                    <a href="https://www.facebook.com/" class="redSocial-face">Facebook</a> </li>
+                <li class="navF-item"> 
+                    <a href="https://twitter.com/?lang=es" class="redSocial-twitter">Twitter</a> </li>
+                <li class="navF-item"> 
+                    <a href="mailto:mail@gmail.com"class="redSocial-email">email</a> </li>
             </ul>
         </div>  
     </footer>
